[gd_scene load_steps=13 format=3 uid="uid://bdbuukifpyedh"]

[ext_resource type="PackedScene" uid="uid://dycvjsyhm3obh" path="res://scenes/level/level.tscn" id="1_nbem0"]
[ext_resource type="Script" path="res://scenes/level/base_room_4.gd" id="2_w12ti"]
[ext_resource type="TileSet" uid="uid://cx7nxglpy1f1v" path="res://scenes/level/base_room_1.tres" id="3_04gvl"]
[ext_resource type="PackedScene" uid="uid://bj0068kkce64r" path="res://scenes/objects/front_door.tscn" id="4_vfycu"]
[ext_resource type="PackedScene" uid="uid://lph0jd7j7dgp" path="res://scenes/objects/back_door.tscn" id="5_jeilw"]
[ext_resource type="PackedScene" uid="uid://6diqfbed0kqj" path="res://scenes/objects/side_torch_l.tscn" id="6_o3omk"]
[ext_resource type="PackedScene" uid="uid://j41s4c5oc3wi" path="res://scenes/objects/side_torch_r.tscn" id="7_3sq4i"]
[ext_resource type="PackedScene" uid="uid://fv4t1le7meyh" path="res://scenes/objects/simple_torch.tscn" id="8_v5os2"]
[ext_resource type="PackedScene" uid="uid://obwlngvpff0t" path="res://scenes/container/box.tscn" id="9_dmghu"]
[ext_resource type="PackedScene" uid="uid://d1xoxr7jmq1sm" path="res://scenes/mob/big_demon.tscn" id="11_itpxx"]
[ext_resource type="PackedScene" uid="uid://pbmi4tayixij" path="res://scenes/mob/smart_demon.tscn" id="12_stmlj"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_18f17"]
vertices = PackedVector2Array(228, 37, 228, 54, 204, 54, 204, 35, 204, 170, 204, 106, 282, 106, 245, 147, 186, 310, 186, 250, 246, 250, 246, 283, 438, 310, 395, 282, 437, 90, 394, 160, 394, 102, 282, 90, 294, 102, 294, 154, 340, 154, 340, 226, 298, 166, 246, 192, 246, 198, 133, 198, 124, 170, 11, 11, 436, 11, 436, 34, 37, 36, 11, 308, 38, 282, 133, 307, 123, 283, 291, 162, 301, 226, 298, 207, 292, 166)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(12, 8, 11, 13), PackedInt32Array(14, 12, 13, 15, 16), PackedInt32Array(17, 14, 16, 18), PackedInt32Array(6, 17, 18, 19), PackedInt32Array(19, 20, 21, 22), PackedInt32Array(4, 23, 24, 25, 26), PackedInt32Array(27, 28, 29, 0, 3), PackedInt32Array(27, 3, 30), PackedInt32Array(31, 27, 30, 32), PackedInt32Array(33, 31, 32, 34), PackedInt32Array(25, 33, 34, 26), PackedInt32Array(7, 23, 4), PackedInt32Array(7, 6, 19, 35), PackedInt32Array(21, 36, 37, 22), PackedInt32Array(22, 38, 35, 19)])
outlines = Array[PackedVector2Array]([PackedVector2Array(2, 319, 1, 2, 446, 1, 447, 44, 238, 47, 238, 67, 194, 66, 194, 45, 47, 46, 48, 272, 113, 273, 114, 160, 194, 160, 194, 96, 271, 90, 273, 80, 447, 79, 448, 320, 176, 320, 177, 241, 256, 240, 256, 273, 385, 272, 383, 113, 304, 115, 308, 141, 350, 143, 350, 236, 287, 242, 282, 170, 255, 161, 256, 209, 143, 208, 144, 317)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Base Room 4" instance=ExtResource("1_nbem0")]
script = ExtResource("2_w12ti")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Ground" index="0"]
navigation_polygon = SubResource("NavigationPolygon_18f17")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="Ground/NavigationRegion2D" index="0"]
tile_set = ExtResource("3_04gvl")
format = 2
layer_0/name = "Walls"
layer_0/tile_data = PackedInt32Array(65535, 5, 2, 131071, 5, 3, 196607, 5, 3, 262143, 5, 0, 327679, 5, 2, 393215, 5, 2, 458751, 5, 2, 524287, 5, 0, 589823, 5, 3, 655359, 5, 3, 720895, 5, 3, 786431, 5, 0, 851967, 5, 3, 917503, 5, 0, 983039, 5, 3, 1048575, 5, 2, 1114111, 5, 1, 1179647, 5, 3, 1245183, 5, 0, 1310719, 5, 0, 28, 327685, 3, 65564, 327685, 0, 131100, 327685, 3, 196636, 327685, 1, 262172, 327685, 0, 327708, 327685, 1, 393244, 327685, 0, 458780, 327685, 0, 524316, 327685, 2, 589852, 327685, 3, 655388, 327685, 1, 720924, 327685, 0, 786460, 327685, 1, 851996, 327685, 1, 917532, 327685, 1, 983068, 327685, 1, 1048604, 327685, 0, 1114140, 327685, 1, 1179676, 327685, 0, 1245212, 327685, 2, -65508, 327685, 2, -1, 5, 0, -65536, 65541, 65536, -65535, 65541, 65536, -65534, 65541, 65536, -65533, 65541, 65536, -65532, 65541, 65536, -65531, 65541, 0, -65530, 262149, 0, -65529, 131077, 0, -65528, 65541, 65536, -65527, 65541, 65536, -65526, 65541, 65536, -65525, 65541, 65536, -65524, 65541, 65536, -65521, 65541, 0, -65520, 131077, 0, -65519, 196613, 0, -65518, 196613, 0, -65517, 131077, 0, -65516, 131077, 0, -65515, 262149, 0, -65514, 196613, 0, -65513, 65541, 0, -65512, 262149, 0, -65511, 131077, 0, -65510, 262149, 0, -65509, 262149, 0, 1310720, 196613, 4, 1310721, 131077, 4, 1310722, 196613, 4, 1310723, 131077, 4, 1310724, 131077, 4, 1310725, 262149, 4, 1310726, 262149, 4, 1310727, 65541, 4, 1310728, 262149, 4, 1310729, 196613, 4, 1310730, 131077, 4, 1310731, 196613, 4, 1310732, 196613, 4, 1310735, 131077, 4, 1310736, 131077, 4, 1310737, 131077, 4, 1310738, 262149, 4, 1310739, 196613, 4, 1310740, 131077, 4, 1310741, 131077, 4, 1310742, 196613, 4, 1310743, 196613, 4, 1310744, 131077, 4, 1310745, 65541, 4, 1310746, 131077, 4, 1310747, 196613, 4, 1310748, 327685, 4, 1376255, 5, 4, 983050, 5, 3, 851978, 131077, 4, 851979, 196613, 4, 851980, 65541, 4, 851981, 131077, 4, 851982, 65541, 4, 851983, 262149, 4, 851984, 327685, 4, 851985, 5, 1, 917521, 5, 2, 983057, 5, 4, 1048593, 196613, 0, 1048599, 196613, 0, 983063, 5, 2, 917527, 5, 3, 851991, 5, 2, 786455, 5, 0, 720919, 5, 1, 655383, 5, 3, 589847, 5, 1, 524311, 5, 3, 458775, 196613, 5, 458774, 196613, 4, 458773, 131077, 4, 458772, 262149, 4, 458771, 5, 5, 196635, 262149, 4, 196634, 196613, 4, 196633, 196613, 4, 196632, 196613, 4, 196631, 65541, 4, 196630, 196613, 4, 196629, 196613, 4, 196628, 262149, 4, 196627, 196613, 4, 196626, 196613, 4, 196625, 196613, 4, 327695, 65541, 65536, 327694, 65541, 65536, 327693, 65541, 65536, 327692, 65541, 65536, 589835, 131077, 0, 589834, 131077, 0, 589833, 262149, 0, 589832, 131077, 0, 720912, 5, 5, 786448, 327685, 1, 589831, 65541, 0, 589830, 5, 0, 1048582, 196613, 0, 1048581, 131077, 0, 1048580, 65541, 0, 1048579, 196613, 0, 983043, 327685, 1, 917507, 327685, 3, 851971, 327685, 1, 786435, 327685, 0, 720899, 327685, 3, 655363, 327685, 0, 589827, 327685, 3, 524291, 327685, 2, 458755, 327685, 0, 393219, 327685, 3, 327683, 327685, 2, 262147, 327685, 1, 196611, 5, 5, 196612, 262149, 4, 196613, 65541, 4, 196614, 262149, 4, 196615, 65541, 4, 196616, 131077, 4, 196617, 131077, 4, 327696, 65541, 65536, 262160, 5, 0, 196624, 262149, 4, 1245194, 5, 1, 1179658, 5, 0, 1114122, 5, 3, 1048586, 5, 0, 1245193, 327685, 1, 1179657, 327685, 1, 1114121, 327685, 0, 983049, 327685, 0, 1048585, 327685, 1, 917513, 327685, 3, 851977, 5, 5, 917514, 5, 1, 917515, 262149, 0, 917516, 196613, 0, 917517, 131077, 0, 917518, 262149, 0, 917519, 131077, 0, 917520, 327685, 0, 983056, 327685, 0, 1048592, 65541, 0, 786449, 5, 2, 720913, 196613, 5, 983058, 196613, 4, 983059, 65541, 4, 983060, 65541, 4, 983061, 262149, 4, 983062, 327685, 4, 917526, 327685, 1, 851990, 327685, 0, 786454, 327685, 1, 720918, 327685, 1, 524307, 196613, 0, 524308, 65541, 65536, 524309, 65541, 65536, 524310, 327685, 0, 655382, 327685, 3, 589846, 327685, 3, 983046, 5, 3, 917510, 5, 1, 851974, 5, 1, 786438, 5, 3, 720902, 5, 3, 655366, 5, 0, 262161, 131077, 0, 262162, 65541, 0, 262163, 196613, 0, 262164, 65541, 0, 262165, 196613, 0, 262166, 262149, 0, 262167, 131077, 0, 262168, 262149, 0, 262169, 196613, 0, 262170, 196613, 0, 262171, 65541, 0, 196623, 5, 5, 262159, 327685, 4, 262155, 5, 4, 196619, 196613, 5, 983045, 524293, 7, 983044, 524293, 7, 917508, 524293, 7, 917509, 524293, 7, 851972, 524293, 7, 786436, 524293, 7, 786437, 524293, 7, 851973, 524293, 7, 720901, 524293, 7, 655365, 524293, 7, 589829, 524293, 7, 524293, 524293, 7, 589828, 524293, 7, 655364, 524293, 7, 720900, 524293, 7, 524292, 524293, 7, 524294, 524293, 7, 524295, 524293, 7, 458757, 524293, 7, 458756, 524293, 7, 393220, 524293, 7, 327684, 524293, 7, 262148, 524293, 7, 262149, 524293, 7, 262150, 524293, 7, 262151, 524293, 7, 262152, 524293, 7, 262153, 524293, 7, 262154, 524293, 7, 327686, 524293, 7, 327685, 524293, 7, 393221, 524293, 7, 458758, 524293, 7, 393222, 524293, 7, 393223, 524293, 7, 393224, 524293, 7, 458760, 524293, 7, 458759, 524293, 7, 524296, 524293, 7, 524297, 524293, 7, 524298, 524293, 7, 524299, 5, 0, 458763, 5, 1, 393227, 5, 1, 327691, 5, 0, 327690, 524293, 7, 327688, 524293, 7, 327687, 524293, 7, 327689, 524293, 7, 393225, 524293, 7, 458761, 524293, 7, 458762, 524293, 7, 393226, 524293, 7, 196618, 65541, 4, 1048594, 65541, 65536, 1048595, 65541, 65536, 1048596, 65541, 65536, 1048597, 65541, 65536, 1048598, 65541, 65536, 262158, 65541, 4, 262157, 65541, 4, 262156, 65541, 4)
layer_1/name = "Ground"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(0, 65541, 3, 65536, 131077, 3, 131072, 65541, 1, 196608, 131077, 2, 262144, 65541, 1, 327680, 196613, 3, 393216, 65541, 1, 458752, 65541, 3, 524288, 65541, 1, 589824, 65541, 2, 655360, 196613, 2, 720896, 131077, 2, 786432, 262149, 1, 851968, 196613, 3, 917504, 65541, 2, 983040, 131077, 1, 1048576, 65541, 3, 1114112, 196613, 1, 1179648, 196613, 3, 1245184, 196613, 1, 1, 262149, 1, 65537, 65541, 1, 131073, 262149, 2, 196609, 131077, 2, 262145, 196613, 2, 327681, 262149, 3, 393217, 262149, 3, 458753, 262149, 3, 524289, 65541, 1, 589825, 196613, 2, 655361, 131077, 3, 720897, 196613, 2, 786433, 65541, 3, 851969, 65541, 3, 917505, 131077, 1, 983041, 131077, 3, 1048577, 131077, 3, 1114113, 196613, 1, 1179649, 131077, 3, 1245185, 262149, 1, 2, 65541, 2, 65538, 65541, 1, 131074, 131077, 3, 196610, 262149, 3, 262146, 131077, 2, 327682, 131077, 2, 393218, 65541, 3, 458754, 65541, 3, 524290, 262149, 1, 589826, 131077, 2, 655362, 65541, 1, 720898, 131077, 1, 786434, 131077, 3, 851970, 196613, 3, 917506, 65541, 1, 983042, 65541, 3, 1048578, 196613, 3, 1114114, 196613, 1, 1179650, 131077, 1, 1245186, 196613, 3, 3, 65541, 2, 65539, 196613, 3, 131075, 196613, 2, 196611, 131077, 2, 262147, 262149, 1, 327683, 196613, 2, 393219, 196613, 1, 458755, 262149, 3, 524291, 196613, 3, 589827, 196613, 1, 655363, 262149, 1, 720899, 65541, 1, 786435, 196613, 2, 851971, 262149, 2, 917507, 262149, 2, 983043, 65541, 1, 1048579, 262149, 2, 1114115, 131077, 2, 1179651, 262149, 2, 1245187, 131077, 1, 4, 65541, 3, 65540, 196613, 2, 131076, 131077, 3, 196612, 65541, 2, 262148, 262149, 1, 327684, 131077, 2, 393220, 196613, 2, 458756, 131077, 3, 524292, 65541, 3, 589828, 196613, 1, 655364, 262149, 3, 720900, 131077, 3, 786436, 65541, 1, 851972, 196613, 3, 917508, 65541, 1, 983044, 262149, 3, 1048580, 262149, 2, 1114116, 65541, 3, 1179652, 262149, 1, 1245188, 196613, 2, 5, 196613, 3, 65541, 262149, 3, 131077, 65541, 3, 196613, 196613, 2, 262149, 196613, 2, 327685, 131077, 3, 393221, 131077, 1, 458757, 262149, 1, 524293, 196613, 3, 589829, 262149, 2, 655365, 131077, 1, 720901, 196613, 2, 786437, 131077, 3, 851973, 196613, 2, 917509, 65541, 3, 983045, 196613, 1, 1048581, 65541, 2, 1114117, 131077, 2, 1179653, 262149, 3, 1245189, 196613, 1, 6, 262149, 1, 65542, 131077, 2, 131078, 196613, 3, 196614, 262149, 3, 262150, 196613, 1, 327686, 196613, 1, 393222, 262149, 1, 458758, 65541, 1, 524294, 65541, 1, 589830, 65541, 1, 655366, 262149, 2, 720902, 196613, 2, 786438, 65541, 3, 851974, 196613, 1, 917510, 196613, 2, 983046, 65541, 1, 1048582, 131077, 2, 1114118, 196613, 3, 1179654, 131077, 1, 1245190, 196613, 3, 7, 196613, 3, 65543, 131077, 3, 131079, 131077, 2, 196615, 131077, 3, 262151, 131077, 2, 327687, 65541, 3, 393223, 262149, 3, 458759, 262149, 1, 524295, 131077, 3, 589831, 262149, 2, 655367, 65541, 3, 720903, 65541, 1, 786439, 196613, 1, 851975, 262149, 2, 917511, 131077, 2, 983047, 131077, 1, 1048583, 262149, 2, 1114119, 262149, 1, 1179655, 131077, 2, 1245191, 196613, 2, 8, 65541, 3, 65544, 262149, 1, 131080, 65541, 1, 196616, 196613, 2, 262152, 196613, 3, 327688, 131077, 1, 393224, 196613, 1, 458760, 262149, 1, 524296, 131077, 3, 589832, 262149, 2, 655368, 262149, 2, 720904, 131077, 3, 786440, 196613, 3, 851976, 196613, 2, 917512, 65541, 1, 983048, 262149, 1, 1048584, 131077, 2, 1114120, 131077, 1, 1179656, 262149, 1, 1245192, 65541, 1, 9, 131077, 1, 65545, 131077, 1, 131081, 196613, 3, 196617, 262149, 1, 262153, 196613, 3, 327689, 131077, 3, 393225, 131077, 3, 458761, 65541, 3, 524297, 262149, 1, 589833, 65541, 2, 655369, 262149, 2, 720905, 262149, 3, 786441, 131077, 2, 851977, 65541, 3, 917513, 131077, 2, 983049, 131077, 3, 1048585, 262149, 1, 1114121, 262149, 3, 1179657, 262149, 1, 1245193, 131077, 3, 10, 65541, 3, 65546, 262149, 3, 131082, 262149, 2, 196618, 262149, 2, 262154, 262149, 3, 327690, 131077, 1, 393226, 196613, 1, 458762, 131077, 1, 524298, 65541, 1, 589834, 262149, 2, 655370, 65541, 1, 720906, 196613, 1, 786442, 131077, 1, 851978, 131077, 2, 917514, 131077, 1, 983050, 65541, 1, 1048586, 65541, 1, 1114122, 262149, 1, 1179658, 65541, 1, 1245194, 262149, 1, 11, 131077, 1, 65547, 196613, 1, 131083, 131077, 2, 196619, 131077, 3, 262155, 196613, 3, 327691, 262149, 2, 393227, 262149, 1, 458763, 65541, 1, 524299, 262149, 2, 589835, 196613, 3, 655371, 131077, 2, 720907, 196613, 1, 786443, 131077, 3, 851979, 262149, 2, 917515, 65541, 2, 983051, 196613, 3, 1048587, 262149, 3, 1114123, 262149, 1, 1179659, 262149, 2, 1245195, 65541, 2, 12, 65541, 2, 65548, 196613, 2, 131084, 131077, 3, 196620, 65541, 1, 262156, 196613, 3, 327692, 131077, 1, 393228, 196613, 1, 458764, 262149, 1, 524300, 196613, 1, 589836, 65541, 2, 655372, 131077, 2, 720908, 131077, 1, 786444, 262149, 2, 851980, 262149, 1, 917516, 262149, 3, 983052, 262149, 1, 1048588, 65541, 2, 1114124, 262149, 3, 1179660, 196613, 1, 1245196, 196613, 1, 13, 262149, 2, 65549, 65541, 2, 131085, 262149, 1, 196621, 262149, 1, 262157, 65541, 3, 327693, 65541, 2, 393229, 196613, 1, 458765, 65541, 3, 524301, 65541, 1, 589837, 262149, 2, 655373, 196613, 2, 720909, 196613, 2, 786445, 196613, 1, 851981, 131077, 1, 917517, 131077, 3, 983053, 262149, 2, 1048589, 131077, 3, 1114125, 65541, 1, 1179661, 196613, 1, 1245197, 262149, 3, 14, 65541, 3, 65550, 196613, 3, 131086, 196613, 3, 196622, 65541, 2, 262158, 262149, 1, 327694, 131077, 3, 393230, 196613, 2, 458766, 196613, 1, 524302, 65541, 1, 589838, 65541, 2, 655374, 262149, 3, 720910, 65541, 1, 786446, 65541, 2, 851982, 262149, 1, 917518, 262149, 1, 983054, 196613, 1, 1048590, 131077, 1, 1114126, 131077, 2, 1179662, 262149, 1, 1245198, 131077, 2, 15, 131077, 2, 65551, 196613, 3, 131087, 65541, 1, 196623, 131077, 1, 262159, 65541, 1, 327695, 65541, 2, 393231, 65541, 1, 458767, 196613, 1, 524303, 196613, 1, 589839, 131077, 3, 655375, 262149, 3, 720911, 262149, 3, 786447, 65541, 3, 851983, 196613, 3, 917519, 262149, 1, 983055, 65541, 2, 1048591, 65541, 1, 1114127, 262149, 3, 1179663, 65541, 1, 1245199, 262149, 3, 16, 262149, 3, 65552, 262149, 2, 131088, 131077, 2, 196624, 131077, 3, 262160, 262149, 3, 327696, 131077, 1, 393232, 131077, 2, 458768, 131077, 3, 524304, 196613, 1, 589840, 262149, 2, 655376, 262149, 2, 720912, 196613, 2, 786448, 65541, 2, 851984, 65541, 2, 917520, 196613, 2, 983056, 262149, 1, 1048592, 131077, 3, 1114128, 131077, 3, 1179664, 196613, 2, 1245200, 196613, 2, 17, 131077, 1, 65553, 196613, 2, 131089, 262149, 2, 196625, 65541, 2, 262161, 131077, 1, 327697, 196613, 3, 393233, 262149, 1, 458769, 131077, 3, 524305, 196613, 3, 589841, 196613, 3, 655377, 131077, 2, 720913, 196613, 2, 786449, 65541, 1, 851985, 131077, 2, 917521, 131077, 1, 983057, 196613, 2, 1048593, 196613, 1, 1114129, 131077, 3, 1179665, 196613, 1, 1245201, 131077, 2, 18, 262149, 3, 65554, 196613, 1, 131090, 65541, 2, 196626, 131077, 2, 262162, 262149, 3, 327698, 65541, 2, 393234, 65541, 2, 458770, 65541, 3, 524306, 196613, 3, 589842, 196613, 2, 655378, 131077, 3, 720914, 65541, 2, 786450, 196613, 3, 851986, 65541, 2, 917522, 262149, 2, 983058, 262149, 2, 1048594, 262149, 2, 1114130, 131077, 2, 1179666, 196613, 1, 1245202, 262149, 2, 19, 65541, 2, 65555, 196613, 2, 131091, 131077, 3, 196627, 196613, 1, 262163, 65541, 2, 327699, 262149, 1, 393235, 131077, 2, 458771, 65541, 3, 524307, 262149, 1, 589843, 196613, 3, 655379, 65541, 3, 720915, 131077, 2, 786451, 196613, 1, 851987, 196613, 1, 917523, 196613, 3, 983059, 65541, 2, 1048595, 131077, 3, 1114131, 262149, 1, 1179667, 262149, 2, 1245203, 65541, 1, 20, 262149, 3, 65556, 196613, 1, 131092, 196613, 2, 196628, 196613, 1, 262164, 65541, 3, 327700, 131077, 2, 393236, 196613, 3, 458772, 196613, 1, 524308, 65541, 3, 589844, 262149, 2, 655380, 196613, 3, 720916, 65541, 1, 786452, 262149, 1, 851988, 65541, 2, 917524, 262149, 1, 983060, 65541, 3, 1048596, 131077, 1, 1114132, 262149, 2, 1179668, 65541, 2, 1245204, 196613, 2, 21, 131077, 2, 65557, 262149, 2, 131093, 196613, 3, 196629, 262149, 2, 262165, 262149, 2, 327701, 262149, 3, 393237, 262149, 3, 458773, 196613, 2, 524309, 65541, 3, 589845, 65541, 2, 655381, 131077, 3, 720917, 131077, 2, 786453, 196613, 1, 851989, 196613, 2, 917525, 65541, 1, 983061, 262149, 2, 1048597, 262149, 2, 1114133, 196613, 2, 1179669, 65541, 2, 1245205, 262149, 1, 22, 65541, 1, 65558, 196613, 3, 131094, 196613, 3, 196630, 131077, 2, 262166, 196613, 1, 327702, 131077, 1, 393238, 196613, 1, 458774, 262149, 3, 524310, 65541, 1, 589846, 65541, 1, 655382, 65541, 2, 720918, 131077, 1, 786454, 262149, 1, 851990, 196613, 1, 917526, 131077, 3, 983062, 131077, 1, 1048598, 196613, 2, 1114134, 196613, 3, 1179670, 65541, 1, 1245206, 262149, 2, 23, 65541, 1, 65559, 65541, 1, 131095, 131077, 1, 196631, 131077, 2, 262167, 196613, 3, 327703, 65541, 3, 393239, 131077, 2, 458775, 65541, 3, 524311, 262149, 3, 589847, 131077, 1, 655383, 131077, 2, 720919, 196613, 1, 786455, 131077, 3, 851991, 196613, 2, 917527, 65541, 3, 983063, 262149, 3, 1048599, 262149, 2, 1114135, 131077, 2, 1179671, 131077, 1, 1245207, 196613, 3, 24, 65541, 2, 65560, 262149, 3, 131096, 65541, 2, 196632, 262149, 1, 262168, 196613, 1, 327704, 196613, 1, 393240, 131077, 2, 458776, 131077, 2, 524312, 131077, 1, 589848, 196613, 2, 655384, 65541, 1, 720920, 131077, 1, 786456, 196613, 3, 851992, 196613, 1, 917528, 131077, 3, 983064, 262149, 3, 1048600, 65541, 1, 1114136, 131077, 2, 1179672, 262149, 1, 1245208, 196613, 2, 25, 65541, 3, 65561, 65541, 1, 131097, 196613, 2, 196633, 131077, 1, 262169, 262149, 2, 327705, 262149, 2, 393241, 262149, 1, 458777, 131077, 2, 524313, 65541, 1, 589849, 65541, 3, 655385, 65541, 1, 720921, 262149, 2, 786457, 196613, 1, 851993, 196613, 1, 917529, 196613, 3, 983065, 65541, 2, 1048601, 131077, 3, 1114137, 262149, 2, 1179673, 262149, 3, 1245209, 262149, 2, 26, 65541, 1, 65562, 65541, 2, 131098, 262149, 2, 196634, 131077, 2, 262170, 262149, 1, 327706, 262149, 2, 393242, 65541, 3, 458778, 262149, 1, 524314, 131077, 1, 589850, 65541, 1, 655386, 196613, 1, 720922, 196613, 3, 786458, 65541, 3, 851994, 65541, 3, 917530, 65541, 1, 983066, 196613, 3, 1048602, 262149, 3, 1114138, 196613, 3, 1179674, 262149, 2, 1245210, 131077, 1, 27, 262149, 3, 65563, 262149, 2, 131099, 262149, 3, 196635, 65541, 1, 262171, 196613, 3, 327707, 262149, 3, 393243, 196613, 2, 458779, 65541, 1, 524315, 65541, 2, 589851, 262149, 2, 655387, 65541, 3, 720923, 65541, 1, 786459, 196613, 3, 851995, 262149, 1, 917531, 65541, 1, 983067, 262149, 3, 1048603, 65541, 3, 1114139, 65541, 3, 1179675, 65541, 1, 1245211, 65541, 3, -65523, 65541, 2, -65522, 65541, 3, 1310733, 65541, 3, 1310734, 196613, 2)

[node name="FrontDoor" parent="Ground" index="1" instance=ExtResource("4_vfycu")]
position = Vector2(224, -8)

[node name="BackDoor" parent="Ground" index="2" instance=ExtResource("5_jeilw")]
position = Vector2(224, 328)

[node name="SideTorchL" parent="Ground" index="3" instance=ExtResource("6_o3omk")]
position = Vector2(255, 184)

[node name="SideTorchL2" parent="Ground" index="4" instance=ExtResource("6_o3omk")]
position = Vector2(447, 269)

[node name="SideTorchL3" parent="Ground" index="5" instance=ExtResource("6_o3omk")]
position = Vector2(446, 114)

[node name="SideTorchL4" parent="Ground" index="6" instance=ExtResource("6_o3omk")]
position = Vector2(47, 213)

[node name="SideTorchL5" parent="Ground" index="7" instance=ExtResource("6_o3omk")]
position = Vector2(447, 23)

[node name="SideTorchR" parent="Ground" index="8" instance=ExtResource("7_3sq4i")]
position = Vector2(2, 82)

[node name="SideTorchR2" parent="Ground" index="9" instance=ExtResource("7_3sq4i")]
position = Vector2(113, 188)

[node name="SideTorchR3" parent="Ground" index="10" instance=ExtResource("7_3sq4i")]
position = Vector2(289, 220)

[node name="SideTorchR4" parent="Ground" index="11" instance=ExtResource("7_3sq4i")]
position = Vector2(177, 281)

[node name="SideTorchR5" parent="Ground" index="12" instance=ExtResource("7_3sq4i")]
position = Vector2(3, 295)

[node name="SimpleTorch" parent="Ground" index="13" instance=ExtResource("8_v5os2")]
position = Vector2(168, -6)

[node name="SimpleTorch2" parent="Ground" index="14" instance=ExtResource("8_v5os2")]
position = Vector2(39, -6)

[node name="SimpleTorch3" parent="Ground" index="15" instance=ExtResource("8_v5os2")]
position = Vector2(231, 90)

[node name="SimpleTorch4" parent="Ground" index="16" instance=ExtResource("8_v5os2")]
position = Vector2(329, 141)

[node name="SimpleTorch5" parent="Ground" index="17" instance=ExtResource("8_v5os2")]
position = Vector2(328, 265)

[node name="Box" parent="Ground" index="18" instance=ExtResource("9_dmghu")]
position = Vector2(343, 148)

[node name="Box2" parent="Ground" index="19" instance=ExtResource("9_dmghu")]
position = Vector2(380, 3)

[node name="Box3" parent="Ground" index="20" instance=ExtResource("9_dmghu")]
position = Vector2(407, 2)

[node name="Position2D2" type="Marker2D" parent="Entrance" index="0"]
position = Vector2(230, 329)

[node name="Marker2D" type="Marker2D" parent="Entrance" index="1"]
position = Vector2(216, 329)

[node name="BigDemon2" parent="Mobs" index="0" instance=ExtResource("11_itpxx")]
position = Vector2(364, 93)

[node name="BigDemon3" parent="Mobs" index="1" instance=ExtResource("11_itpxx")]
position = Vector2(61, 29)

[node name="BigDemon" parent="Mobs" index="2" instance=ExtResource("11_itpxx")]
position = Vector2(78, 292)

[node name="SmartDemon" parent="Mobs" index="3" instance=ExtResource("12_stmlj")]
position = Vector2(331, 212)

[node name="SmartDemon2" parent="Mobs" index="4" instance=ExtResource("12_stmlj")]
position = Vector2(131, 220)

[node name="PlayerEntrancePos" type="Marker2D" parent="PositionHelpers" index="0"]
position = Vector2(224, 263)

[node name="PlayerLastRoomPos" type="Marker2D" parent="PositionHelpers" index="1"]
position = Vector2(223, 49)

[node name="CameraHelp" type="Marker2D" parent="PositionHelpers" index="2"]
position = Vector2(-8, 328)

[node name="CameraHelp2" type="Marker2D" parent="PositionHelpers" index="3"]
position = Vector2(454, -15)

[connection signal="player_entered_door" from="Ground/FrontDoor" to="." method="_on_front_door_player_entered_door"]
[connection signal="player_near_door" from="Ground/FrontDoor" to="." method="_on_front_door_player_near_door"]
[connection signal="player_not_near_door" from="Ground/FrontDoor" to="." method="_on_front_door_player_not_near_door"]
[connection signal="player_entered_door" from="Ground/BackDoor" to="." method="_on_back_door_player_entered_door"]
[connection signal="player_near_door" from="Ground/BackDoor" to="." method="_on_back_door_player_near_door"]
[connection signal="player_not_near_door" from="Ground/BackDoor" to="." method="_on_back_door_player_not_near_door"]
